# template-task

./: CMakeLists.txt  README.md
.github/workflows/: bash.yml  cmake.yml
